	* Incremented the library ABI version to 17:0:2.
	* Incremented the package version to 0.21.0.
2020-06-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the RPM packaging that failed to enforce version
	consistency between the base and '-devel' packages.
2020-06-11 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.21.1.
2020-11-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'SyLwrpClient::setGpoSourceAddress()' method
	that broke operation for GPIO endpoints.
2020-11-11 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library ABI version to 17:1:2.
	* Incremented the package version to 0.21.2.
2021-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Updated Qt dependency to Qt5.
2021-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Changed the library SONAME from 'Switchyard' to 'Switchyard5'.
2021-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'make rpm' target to generate the RPM datestamp
	automatically.
2021-07-21 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in that caused the header files to be installed in
	the incorrect location.
2022-05-31 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up multiple build warnings.
2022-06-01 Fred Gleason <fredg@paravelsystems.com>
	* Debianized the source tree.
2022-06-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SySignalNotifier' class.
2022-06-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs that broke the build under Qt-5.9.7.
2022-06-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library ABI version to 18:0:3.
	* Incremented the package version to 0.22.0.
2022-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Removed sygpiotest(1) from the 'switchyard-devel' RPM package.
2022-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Removed sygpiotest(1) from the 'switchyard-devel' DEB package.
2022-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.22.1.